[workspace]
members = [
    "nps-core",
    "nps-ncp",
    "nps-nwp",
    "nps-nip",
    "nps-ndp",
    "nps-nop",
    "nps-sdk",
]
resolver = "2"

[workspace.package]
version     = "1.0.0-alpha.2"
edition     = "2021"
license     = "Apache-2.0"
authors     = ["Ori Lynn <iamzerolin@gmail.com>"]
repository  = "https://github.com/labacacia/nps"

[workspace.dependencies]
# Serialisation
serde          = { version = "1",       features = ["derive"] }
serde_json     = { version = "1" }
rmp-serde      = { version = "1.3" }

# Crypto
sha2           = { version = "0.10" }
ed25519-dalek  = { version = "2",       features = ["rand_core"] }
aes-gcm        = { version = "0.10" }
pbkdf2         = { version = "0.12",    features = ["hmac"] }
hmac           = { version = "0.12" }
sha2-hmac      = { package = "sha2", version = "0.10" }
rand           = { version = "0.8" }
hex            = { version = "0.4" }
base64         = { version = "0.22" }

# Async / HTTP
tokio          = { version = "1",       features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest        = { version = "0.12",    features = ["json"] }

# Testing
tempfile       = { version = "3" }

# Internal crates
nps-core       = { path = "nps-core" }
nps-ncp        = { path = "nps-ncp" }
nps-nwp        = { path = "nps-nwp" }
nps-nip        = { path = "nps-nip" }
nps-ndp        = { path = "nps-ndp" }
nps-nop        = { path = "nps-nop" }
