[package]
name    = "nip-ca-server"
version = "1.0.0-alpha.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "nip-ca-server"
path = "src/main.rs"

[dependencies]
axum          = "0.8"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
rusqlite      = { version = "0.32", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm       = "0.10"
pbkdf2        = { version = "0.12", features = ["hmac"] }
sha2          = "0.10"
hmac          = "0.12"
rand          = "0.8"
hex           = "0.4"
base64        = "0.22"
anyhow        = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
