[package]
name        = "nps-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
rmp-serde   = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }

[dev-dependencies]
