[package]
name        = "nps-core"
description = "NPS — Neural Protocol Suite core frame types, codec pipeline (Tier-1 JSON / Tier-2 MsgPack), and AnchorFrame cache."
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
rmp-serde   = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }

[dev-dependencies]
