[package]
name        = "nps-ndp"
description = "NPS NDP — Neural Discovery Protocol (announce/resolve/graph frames, registry) for the Neural Protocol Suite"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dev-dependencies]
nps-core    = { workspace = true }

[dependencies]
nps-core    = { workspace = true }
nps-nip     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
