[package]
name        = "nps-nip"
description = "NPS — Neural Identity Protocol frames and Ed25519 identity management with AES-256-GCM key encryption."
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dev-dependencies]
nps-core    = { workspace = true }
tempfile    = { workspace = true }
rand        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
serde_json  = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen       = { workspace = true }
time        = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }

[dependencies]
nps-core       = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
ed25519-dalek  = { workspace = true }
aes-gcm        = { workspace = true }
pbkdf2         = { workspace = true }
hmac           = { workspace = true }
sha2           = { workspace = true }
rand           = { workspace = true }
hex            = { workspace = true }
base64         = { workspace = true }

# NPS-RFC-0002 — X.509 + in-process ACME server
rcgen          = { workspace = true }
x509-parser    = { workspace = true }
tiny_http      = { workspace = true }
reqwest        = { workspace = true }
tokio          = { workspace = true }
time           = { workspace = true }
