[package]
name        = "nps-nop"
description = "NPS NOP — Neural Orchestration Protocol (DAG task orchestration) for the Neural Protocol Suite"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dev-dependencies]
nps-core    = { workspace = true }

[dependencies]
nps-core    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
