[package]
name        = "nps-nwp"
description = "NPS NWP — Neural Web Protocol frames and HTTP client for the Neural Protocol Suite"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dependencies]
nps-core    = { workspace = true }
nps-ncp     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
