[package]
name        = "nps-nwp"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true

[dependencies]
nps-core    = { workspace = true }
nps-ncp     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
