[package]
name        = "nps-nwp"
description = "NPS — Neural Web Protocol frames (QueryFrame, ActionFrame) and async HTTP client."
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[dependencies]
nps-core    = { workspace = true }
nps-ncp     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
